# intorods

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  buildreq.txt  fromIrods.py  pyproject.toml  sample_authfile.json  test.py
.github/workflows/: main.yml  pypi-release.yml
conda/: intorods.yaml
docs/: requirements.txt
docs/source/: about.rst  basic.rst  checksumfiles.rst  conf.py  examples.rst  filters.rst  index.rst  introduction.rst  metadata.rst  options.rst  reference.rst  sources.rst
examples/: example_usage.sh  test_local.sh
schemas/: baseclear_checksum_file_schema.json  pipeline_output_schema.json
src/intorods/: __init__.py  intorods.py
src/intorods/filesys/: fs_base.py  fs_ftp.py  fs_irods.py  fs_local.py  fs_scp.py  fs_sftp.py  fs_smb.py  loghandlers.py  sync.py  test_yml_filter.py  yml_filter.py
test/: test_checksum_creation.py  test_checksumfile_parsing.py  test_intorods_functions.py  test_sync_functions.py  test_yml_filter.py
test/data/: json_checksumfile1.json  json_checksumfile2.json  text_checksumfile1
test/input/: file2
test/output2/: file1
test/src/: timing_test.sh
test/test_deadlock/: create_test_data.sh
test/test_filter/: filter_a_dir.yml  filter_basecall.yml  filter_omit.yml  filter_scan.yml  test_filter_checksumfile.sh  test_omit_filter.sh
test/test_fromIrods/: README.txt  chk.file  download_fromIrods.sh  hashes_100k.yml  hashes_1k.yml
test/test_generic_json_checksum/: a.txt  csf.json  output_checksum  output_wrong
uxhash/: create_checksum_file.py  hash.py
winhash/: hash.cmd
(+5 files in other folders)
